objects/clm__Workflow__mdt.object
<CustomObject>
    <fields>
        <fullName>clm__ButtonAPIName__c</fullName>
        <label>Button/Action API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>clm__EvaluationCriteria__c</fullName>
        <label>Evaluation Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Every time it&apos;s edited</fullName>
                    <default>true</default>
                    <label>Every time it&apos;s edited</label>
                </value>
                <value>
                    <fullName>Any time it&apos;s edited to subsequently meet criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>clm__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clm__ObjectAPIName__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__TriggerContext__c</fullName>
        <label>Trigger Context</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before Create</fullName>
                    <default>true</default>
                    <label>Before Create</label>
                </value>
                <value>
                    <fullName>Before Update</fullName>
                </value>
                <value>
                    <fullName>Before Delete</fullName>
                </value>
                <value>
                    <fullName>After Create</fullName>
                </value>
                <value>
                    <fullName>After Update</fullName>
                </value>
                <value>
                    <fullName>After Delete</fullName>
                </value>
                <value>
                    <fullName>On Click</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>clm__TriggerCriteria__c</fullName>
        <label>Trigger Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CT Mobile Workflow</label>
    <pluralLabel>CT Mobile Workflows</pluralLabel>
</CustomObject>